--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,7 +10,7 @@ beats_client_beats_packages:
 
 beats_client_version: 5.5.0
 # The apt repo URL pegs minor versions (e.g. 5.x) to avoid unexpected upgrades
-beats_client_major_version_abbreviated: 5.x
+beats_client_major_version_abbreviated: "{{ beats_client_version | regex_replace('^(\\d).*$', '\\1.x') }}"
 
 beats_client_beats_prereq:
   - apt-transport-https
