--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -17,3 +17,14 @@
     name: "{{ item }}={{ beats_client_version }}"
     state: present
   with_items: "{{ beats_client_beats_packages }}"
+
+- name: Configure service files.
+  lineinfile:
+    path: "/lib/systemd/system/{{ item }}.service"
+    insertafter: "\[Service\]"
+    line: "EnvironmentFile=-/etc/environment"
+  with_items: "{{ beats_client_beats_packages }}"
+
+- name: Reload systemd
+  systemd:
+    daemon_reload: yes
