--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,6 +22,9 @@ beats_client_keyserver: pgp.mit.edu
 # Elastic's beats debian repository
 beats_client_elastic_repo_url: "deb https://artifacts.elastic.co/packages/{{ beats_client_major_version_abbreviated }}/apt stable main"
 
+# Environment files directory
+beats_client_environment_dir: /etc/default
+
 #### FILEBEAT ##################################################################
 
 
