Fix service files

--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -21,7 +21,7 @@
 - name: Configure service files.
   lineinfile:
     path: "/lib/systemd/system/{{ item }}.service"
-    insertafter: "[Service]"
+    insertafter: "\\[Service\\]"
     line: "EnvironmentFile=-{{ beats_client_environment_dir }}/{{ item }}"
   with_items: "{{ beats_client_beats_packages }}"
 
